fix(*): scroll on mobile devices
fix(*): code

--- a/src/pages/FarmPage/ui/FarmPage.module.scss
+++ b/src/pages/FarmPage/ui/FarmPage.module.scss
@@ -4,6 +4,9 @@
   background: linear-gradient(0deg, #5abf5c 0%, #5abf5c 100%),
     linear-gradient(0deg, var(--White, #fff) 0%, var(--White, #fff) 100%),
     linear-gradient(180deg, #c7eac7 0%, #4cb24e 100%);
+
+  overflow: auto;
+  max-width: 100vw;
 }
 
 g[id="big_house"] {
@@ -150,3 +153,4 @@ g[id^="cows"] {
   z-index: 1;
   pointer-events: none;
 }
+
